ferritin/src/snapshots/ferritin__tests__search.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::search(\"trigger line-based truncation\"),\nOutputMode::TestMode)"
---
<title>Search results for 'trigger line-based truncation'</title>

<list>
  <item><label>test-crate::TestTrait</label> (Trait) - score: 65.0
    A trait for testing extremely long documentation that exceeds line limits.</item>
</list>
