ferritin/src/snapshots/ferritin__tests__search_2.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::search(\"generic struct\"), OutputMode::TestMode)"
---
<title>Search results for 'generic struct'</title>

<list>
  <item><label>test-crate::GenericStruct</label> (Struct) - score: 16.0
    A generic struct for testing multi-paragraph documentation.</item>
</list>
