ferritin/src/snapshots/ferritin__tests__search_2_interactive_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_interactive_for_tests(Commands::search(\"generic struct\"))"
---
"   Search results for 'generic struct'                                          "
"   ════════════════════════════════════════════════════════════════════════════ "
"                                                                                "
"     ◦ test-crate::GenericStruct  (Struct) - score: 100.0 (relevance: 100.0,    "
"       authority: 0.0)                                                          "
"     │ A generic struct for testing multi-paragraph documentation.              "
"     │                                                                          "
"     │ This struct demonstrates how generics work with complex type bounds and  "
"     │ provides a comprehensive example of the generic system in Rust.          "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ alloc::borrow::Borrow  (Trait) - score: 92.8 (relevance: 87.0,           "
"       authority: 6.7)                                                          "
"     │ A trait for borrowing data.                                              "
"     │                                                                          "
"     │ In Rust, it is common to provide different representations of a type for "
"     │  different use cases. For instance, storage location and management for  "
"     │ a value can be specifically chosen as appropriate for a particular use   "
"     │ via pointer types such as Box<T> or Rc<T>. Beyond these generic wrappers "
"     │ that can be used with any type, some types provide optional facets       "
"     │ providing potentially costly functionality. An example for such a type   "
"     │ is String which adds the ability to extend a string to the basic str.    "
"     │ This requires keeping additional information unnecessary for a simple,   "
"     │ immutable string.                                                        "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ core::borrow::Borrow  (Trait) - score: 87.2 (relevance: 87.0,            "
"       authority: 0.2)                                                          "
"     │ A trait for borrowing data.                                              "
"     │                                                                          "
"     │ In Rust, it is common to provide different representations of a type for "
"     │  different use cases. For instance, storage location and management for  "
"     │ a value can be specifically chosen as appropriate for a particular use   "
"     │ via pointer types such as Box<T> or Rc<T>. Beyond these generic wrappers "
"     │ that can be used with any type, some types provide optional facets       "
"     │ providing potentially costly functionality. An example for such a type   "
"     │ is String which adds the ability to extend a string to the basic str.    "
"     │ This requires keeping additional information unnecessary for a simple,   "
"     │ immutable string.                                                        "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ std::borrow::Borrow  (Trait) - score: 87.2 (relevance: 87.0, authority:  "
"       0.2)                                                                     "
"     │ A trait for borrowing data.                                              "
"     │                                                                          "
"     │ In Rust, it is common to provide different representations of a type for "
"     │  different use cases. For instance, storage location and management for  "
"     │ a value can be specifically chosen as appropriate for a particular use   "
"     │ via pointer types such as Box<T> or Rc<T>. Beyond these generic wrappers "
"     │ that can be used with any type, some types provide optional facets       "
"     │ providing potentially costly functionality. An example for such a type   "
"     │ is String which adds the ability to extend a string to the basic str.    "
"     │ This requires keeping additional information unnecessary for a simple,   "
"     │ immutable string.                                                        "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ core::clone::Clone  (Trait) - score: 84.0 (relevance: 83.2, authority:   "
"       1.0)                                                                     "
"     │ A common trait that allows explicit creation of a duplicate value.       "
"     │                                                                          "
"     │ Calling clone always produces a new value. However, for types that are   "
"     │ references to other data (such as smart pointers or references), the     "
"     │ new value may still point to the same underlying data, rather than       "
"     │ duplicating it. See Clone::clone for more details.                       "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ std::clone::Clone  (Trait) - score: 84.0 (relevance: 83.2, authority:    "
"       1.0)                                                                     "
"     │ A common trait that allows explicit creation of a duplicate value.       "
"     │                                                                          "
"     │ Calling clone always produces a new value. However, for types that are   "
"     │ references to other data (such as smart pointers or references), the     "
"     │ new value may still point to the same underlying data, rather than       "
"     │ duplicating it. See Clone::clone for more details.                       "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ core::ops::Deref  (Trait) - score: 80.8 (relevance: 80.0, authority:     "
"       1.0)                                                                     "
"     │ Used for immutable dereferencing operations, like *v.                    "
"     │                                                                          "
"     │ In addition to being used for explicit dereferencing operations with the "
"     │  (unary) * operator in immutable contexts, Deref is also used implicitly "
"     │  by the compiler in many circumstances. This mechanism is called "Deref  "
"     │ coercion". In mutable contexts, DerefMut is used and mutable deref       "
"     │ coercion similarly occurs.                                               "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ std::ops::Deref  (Trait) - score: 80.8 (relevance: 80.0, authority: 1.0) "
"     │ Used for immutable dereferencing operations, like *v.                    "
"     │                                                                          "
"     │ In addition to being used for explicit dereferencing operations with the "
"     │  (unary) * operator in immutable contexts, Deref is also used implicitly "
"     │  by the compiler in many circumstances. This mechanism is called "Deref  "
"     │ coercion". In mutable contexts, DerefMut is used and mutable deref       "
"     │ coercion similarly occurs.                                               "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ core::hash  (Module) - score: 80.0 (relevance: 80.0, authority: 0.0)     "
"     │ Generic hashing support.                                                 "
"     │                                                                          "
"     │ This module provides a generic way to compute the hash of a value.       "
"     │ Hashes are most commonly used with HashMap and HashSet.                  "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ std::hash  (Module) - score: 80.0 (relevance: 80.0, authority: 0.0)      "
"     │ Generic hashing support.                                                 "
"     │                                                                          "
"     │ This module provides a generic way to compute the hash of a value.       "
"     │ Hashes are most commonly used with HashMap and HashSet.                  "
"     ╰─[...]                                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂"
"   ferritin - q:quit ?:help ←/→:history g:go s:search l:list c:code             "
